--- a/dataset/datapackage.yaml
+++ b/dataset/datapackage.yaml
@@ -15,10 +15,16 @@ resources:
       fields:
         - name: unidade
           type: string
+          description: Sigla da unidade hospitalar
+          title: Unidade
         - name: mes
           type: string
+          title: Mês
+          description: Mês referente ao dado
         - name: ano
           type: integer
+          title: Ano
+          description: Ano referente ao dado
         - name: grau
           type: string
         - name: escore
